...
                                maxLines: 2,
                              ),
                              SizedBox(
                                height: 40,
                              ),
                              IntlPhoneField(
                                key:Key("phoneNumber"),
                                flagsButtonPadding: const EdgeInsets.all(8),
                                dropdownIconPosition: IconPosition.trailing,
                                decoration: const InputDecoration(
                                  border: OutlineInputBorder(
                                    borderSide: BorderSide.none,
                                  ),
...
