...
                                maxLines: 2,
                              ),
                              SizedBox(
                                height: 40,
                              ),
                              TextField(
                                key:Key("otp"),
                                textAlign: TextAlign.center,
                                maxLength: 6,
                                showCursor: true,
                                decoration: InputDecoration(
                                  hintText: 'OTP',
                                  hintStyle: TextStyle(
...
